<?xml version="1.0"?>
<package>
  <name>rosauth_jwt</name>
  <version>0.1.0</version>
  <description>
    Verify JWTs
  </description>
  <maintainer email="cpaliqaw@robotnik.es">Chris Paliqaw</maintainer>
  <license>MIT</license>
  <author>Chris Paliqaw</author>
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robotnik_msgs</run_depend>
</package>
